k8s/service-nodeapp.yml
apiVersion: v1
kind: Service
metadata:
  name: nodeapp-service
spec:
  selector:
    app: nodeapp
  ports:
    - protocol: TCP
      port: 80             
      targetPort: 3000 
  type: ClusterIP
